// Original file: proto/inventory.proto

import type { PartInfo as _inventoryPackage_PartInfo, PartInfo__Output as _inventoryPackage_PartInfo__Output } from '../inventoryPackage/PartInfo';

export interface CheckPartsResponse {
  'partsInfo'?: (_inventoryPackage_PartInfo)[];
}

export interface CheckPartsResponse__Output {
  'partsInfo'?: (_inventoryPackage_PartInfo__Output)[];
}
