// Original file: proto/inventory.proto

import type { PartInfo as _inventoryPackage_PartInfo, PartInfo__Output as _inventoryPackage_PartInfo__Output } from '../inventoryPackage/PartInfo';

export interface AddPartResponse {
  'partInfo'?: (_inventoryPackage_PartInfo | null);
}

export interface AddPartResponse__Output {
  'partInfo'?: (_inventoryPackage_PartInfo__Output);
}
