// Original file: proto/inventory.proto

import type { PartInfo as _inventoryPackage_PartInfo, PartInfo__Output as _inventoryPackage_PartInfo__Output } from '../inventoryPackage/PartInfo';

export interface GetRequiredPartsResponse {
  'partsInfo'?: (_inventoryPackage_PartInfo)[];
}

export interface GetRequiredPartsResponse__Output {
  'partsInfo'?: (_inventoryPackage_PartInfo__Output)[];
}
